--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,7 @@ name: Build and Test
 
 on:
   push:
-    branches: [ "master" ]
   pull_request:
-    branches: [ "master" ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -16,7 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - run: rustup toolchain install stable --profile minimal
+    - uses: Swatinem/rust-cache@v2
+    
     - name: Build
-      run: cargo build --verbose
+      run: cargo build
+    
     - name: Run tests
       run: cargo test --verbose
