:construction_worker: Only run CI when actual source code changes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,15 @@ name: Build and Test
 
 on:
   push:
+    paths-ignore:
+      - '*.md'
+      - '.github/**'
+      - '.gitignore' 
   pull_request:
+    paths-ignore:
+      - '*.md'
+      - '.github/**'
+      - '.gitignore'
 
 env:
   CARGO_TERM_COLOR: always
