--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,6 +2,10 @@ name: Run benchmarks
 
 on:
   push:
+    paths-ignore:
+      - '*.md'
+      - '.github/**'
+      - '.gitignore'
 
 env:
   CARGO_TERM_COLOR: always
