--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bench = false
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 itertools = "0.10.5"
+slab_tree = "0.3.2"
 
 [dev-dependencies]
 test-case = "2.2.2"
