--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 itertools = "0.10.5"
 slab_tree = "0.3.2"
+take-until = "0.1.0"
 
 [dev-dependencies]
 test-case = "2.2.2"
