--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ aoc-runner-derive = "0.3.0"
 itertools = "0.10.5"
 slab_tree = "0.3.2"
 take-until = "0.1.0"
+automod = "1.0"
 
 [dev-dependencies]
 test-case = "2.2.2"
